name:                time-checker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/time-checker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  extensions:          DataKinds
                       FlexibleContexts
                       FlexibleInstances
                       KindSignatures
                       MultiParamTypeClasses
                       PartialTypeSignatures
                       ScopedTypeVariables
                       TypeFamilies
                       TypeOperators
                       ConstraintKinds
  exposed-modules:     Data.Time.ValidGregorian
  build-depends:       base >= 4.7 && < 5
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite time-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , time-checker
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/time-checker
